--- a/build.xml
+++ b/build.xml
@@ -1,261 +1,216 @@
-<?xml version="1.0" encoding="utf-8"?>
-<project name="CakePHP" default="build">
-	<!--
-	Build.xml file for CakePHP
+<?xml version="1.0" encoding="UTF-8"?>
+<project name="cakephp" default="build">
+ <!-- By default, we assume all tools to be on the $PATH -->
+ <property name="toolsdir" value=""/>
 
-	Uses phing to create releases, and pear packages.
-	Based off of build.xml in doctrine.
+ <!-- Uncomment the following when the tools are in ${basedir}/vendor/bin -->
+ <!-- <property name="toolsdir" value="${basedir}/vendor/bin/"/> -->
 
-	Requires the cakephp/d51PearPkg2 to be installed:
+ <target name="build"
+         depends="prepare,lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci,phpunit,phpdox"
+         description=""/>
 
-	pear channel-discover pear.domain51.com
-	pear install cakephp/Phing_d51PearPkg2Task
+ <target name="build-parallel"
+         depends="prepare,lint,tools-parallel,phpunit,phpdox"
+         description=""/>
 
-	Use the `release` task to update VERSION.txt, and create a new tag.
-	Use the `build` task to create a pear package based on the current working copy.
-	Use the `clean` task to clean up packaging artifacts.
+ <target name="tools-parallel" description="Run tools in parallel">
+  <parallel threadCount="2">
+   <sequential>
+    <antcall target="pdepend"/>
+    <antcall target="phpmd-ci"/>
+   </sequential>
+   <antcall target="phpcpd-ci"/>
+   <antcall target="phpcs-ci"/>
+   <antcall target="phploc-ci"/>
+  </parallel>
+ </target>
 
-	-->
+ <target name="clean"
+         unless="clean.done"
+         description="Cleanup build artifacts">
+  <delete dir="${basedir}/build/api"/>
+  <delete dir="${basedir}/build/coverage"/>
+  <delete dir="${basedir}/build/logs"/>
+  <delete dir="${basedir}/build/pdepend"/>
+  <delete dir="${basedir}/build/phpdox"/>
+  <property name="clean.done" value="true"/>
+ </target>
 
-	<taskdef classname="phing.tasks.ext.d51PearPkg2Task" name="d51pearpkg2" />
-	<property file="build.properties" />
+ <target name="prepare"
+         unless="prepare.done"
+         depends="clean"
+         description="Prepare for build">
+  <mkdir dir="${basedir}/build/api"/>
+  <mkdir dir="${basedir}/build/coverage"/>
+  <mkdir dir="${basedir}/build/logs"/>
+  <mkdir dir="${basedir}/build/pdepend"/>
+  <mkdir dir="${basedir}/build/phpdox"/>
+  <property name="prepare.done" value="true"/>
+ </target>
 
-	<!--
-		The set of files we're going to package
-		Exclude the cli scripts, as they get installed separately.
-	 -->
-	<fileset id="libs" dir="./lib/Cake">
-		<include name="**" />
-		<exclude name="Console/cake.bat" />
-		<exclude name="Console/cake.php" />
-		<exclude name="Console/cake" />
-		<exclude name="Test/bake_compare/**" />
-		<exclude name="Test/Case/**" />
-		<exclude name="Test/test_app/**" />
-	</fileset>
+ <target name="lint"
+         unless="lint.done"
+         description="Perform syntax check of sourcecode files">
+  <apply executable="php" failonerror="true" taskname="lint">
+   <arg value="-l" />
 
-	<!--
-		CLI scripts to package and install
-	-->
-	<fileset id="cli" dir="./lib/Cake/Console">
-		<include name="cake.bat" />
-		<include name="cake.php" />
-		<include name="cake" />
-	</fileset>
+   <fileset dir="${basedir}/src">
+    <include name="**/*.php" />
+    <modified />
+   </fileset>
 
-	<!-- start fresh each time.  Remove the dist and build dirs -->
-	<target name="clean">
-		<delete dir="${build.dir}" includeemptydirs="true" />
-		<delete dir="${dist.dir}" includeemptydirs="true" />
-	</target>
+   <fileset dir="${basedir}/tests">
+    <include name="**/*.php" />
+    <modified />
+   </fileset>
+  </apply>
 
-	<!-- Read the current version, so we can replace it -->
-	<target name="current-version">
-		<exec executable="php" outputProperty="version">
-			<arg value="-r" />
-			<arg value="$fh = file('./lib/Cake/VERSION.txt'); echo array_pop($fh);" />
-		</exec>
-	</target>
+  <property name="lint.done" value="true"/>
+ </target>
 
-	<!-- Makes directories and sets properties -->
-	<target name="prepare" depends="current-version">
-		<!-- set PEAR stability based on version number. -->
-		<condition property="pear.stability" value="beta">
-			<contains string="${version}" substring="beta" casesensitive="false"/>
-		</condition>
-		<condition property="pear.stability" value="alpha">
-			<contains string="${version}" substring="alpha" casesensitive="false"/>
-		</condition>
-		<condition property="pear.stability" value="devel">
-			<contains string="${version}" substring="dev" casesensitive="false"/>
-		</condition>
-		<condition property="pear.stability" value="beta">
-			<contains string="${version}" substring="rc" casesensitive="false" />
-		</condition>
-		<condition property="pear.stability" value="stable">
-			<not><isset property="pear.stability"/></not>
-		</condition>
+ <target name="phploc"
+         unless="phploc.done"
+         description="Measure project size using PHPLOC and print human readable output. Intended for usage on the command line.">
+  <exec executable="${toolsdir}phploc" taskname="phploc">
+   <arg value="--count-tests" />
+   <arg path="${basedir}/src" />
+   <arg path="${basedir}/tests" />
+  </exec>
 
-		<!-- pear versions need to not have '-' -->
-		<exec executable="php" outputProperty="pear.version">
-			<arg value="-r" />
-			<arg value="echo str_replace(array('-'), array(''), '${version}');" />
-		</exec>
+  <property name="phploc.done" value="true"/>
+ </target>
 
-		<!-- Used for other targets -->
-		<property name="pear.package" value="${project.name}-${pear.version}" />
+ <target name="phploc-ci"
+         unless="phploc.done"
+         depends="prepare"
+         description="Measure project size using PHPLOC and log result in CSV and XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phploc" taskname="phploc">
+   <arg value="--count-tests" />
+   <arg value="--log-csv" />
+   <arg path="${basedir}/build/logs/phploc.csv" />
+   <arg value="--log-xml" />
+   <arg path="${basedir}/build/logs/phploc.xml" />
+   <arg path="${basedir}/src" />
+   <arg path="${basedir}/tests" />
+  </exec>
 
-		<echo msg="Preparing package of ${version} (${pear.version}+${pear.stability})" />
+  <property name="phploc.done" value="true"/>
+ </target>
 
-		<!-- Get the current git branch -->
-		<exec command="git name-rev HEAD 2>/dev/null | awk '{ print $2 }'" outputProperty="git.branch" />
-	</target>
+ <target name="pdepend"
+         unless="pdepend.done"
+         depends="prepare"
+         description="Calculate software metrics using PHP_Depend and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}pdepend" taskname="pdepend">
+   <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
+   <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
+   <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
+   <arg path="${basedir}/src" />
+  </exec>
 
-	<!--
-		Copy all the files to build/ so they can be packaged up.
-	-->
-	<target name="copy-files" depends="clean,prepare">
-		<echo msg="Creating build + dist directories." />
-		<mkdir dir="${build.dir}" />
-		<mkdir dir="${dist.dir}" />
+  <property name="pdepend.done" value="true"/>
+ </target>
 
-		<echo msg="Copying files to build directory" />
-		<copy todir="${build.dir}/${pear.package}/Cake">
-			<fileset refid="libs" />
-		</copy>
-		<copy todir="${build.dir}/${pear.package}/bin">
-			<fileset refid="cli" />
-		</copy>
-	</target>
+ <target name="phpmd"
+         unless="phpmd.done"
+         description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpmd" taskname="phpmd">
+   <arg path="${basedir}/src" />
+   <arg value="text" />
+   <arg path="${basedir}/build/phpmd.xml" />
+  </exec>
 
-	<!--
-		Define the package.xml.  Using xml to make xml is fun!
-	-->
-	<target name="define-pear-package" depends="copy-files">
-		<d51pearpkg2 addhiddenfiles="true" baseinstalldir="/" dir="${build.dir}/${pear.package}">
-			<name>CakePHP</name>
-			<summary>CakePHP Rapid Development Framework</summary>
-			<channel>pear.cakephp.org</channel>
-			<description>CakePHP is an application development framework for PHP 5.2+</description>
+  <property name="phpmd.done" value="true"/>
+ </target>
 
-			<lead user="mark_story" name="Mark Story" email="mark@mark-story.com" />
-			<lead user="lorenzo" name="José Lorenzo Rodríguez" email="jose.zap@gmail.com" />
-			<lead user="PhpNut" name="Larry Masters" email="phpnut@cakephp.org" />
-			<developer user="ADmad" name="Adnan Sarela" email="admad.coder@gmail.com" />
-			<developer user="AD7six" name="Andy Dawson" email="andydawson76@gmail.com" />
-			<developer user="Ceeram" name="Marc Ypes" email="c33ram@gmail.com" />
-			<developer user="jrbasso" name="Juan Basso" email="" />
-			<developer user="Predominant" name="Graham Weldon" email="graham@grahamweldon.com" />
-			<developer user="renan.saddam" name="Renan Gonçalves" email="renan.saddam@gmail.com" />
-			<developer user="rchavik" name="Rachman Chavik" email="rchavik@xintesa.com" />
+ <target name="phpmd-ci"
+         unless="phpmd.done"
+         depends="prepare"
+         description="Perform project mess detection using PHPMD and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phpmd" taskname="phpmd">
+   <arg path="${basedir}/src" />
+   <arg value="xml" />
+   <arg path="${basedir}/build/phpmd.xml" />
+   <arg value="--reportfile" />
+   <arg path="${basedir}/build/logs/pmd.xml" />
+  </exec>
 
-			<license>MIT License</license>
-			<version release="${pear.version}" api="${pear.version}" />
-			<stability release="${pear.stability}" api="${pear.stability}" />
-			<notes>https://github.com/cakephp/cakephp/blob/master/README</notes>
-			<dependencies>
-				<php minimum_version="5.2.8" />
-				<pear minimum_version="1.9.0" recommended_version="1.9.4" />
-			</dependencies>
-			<dirroles key="bin">script</dirroles>
-			<dirroles key="Cake/Console/Templates/skel">php</dirroles>
-			<dirroles key="Cake/Console/Templates/default">php</dirroles>
-			<dirroles key="Cake/View">php</dirroles>
-			<release>
-				<install as="cake.bat" name="bin/cake.bat" />
-				<install as="cake.php" name="bin/cake.php" />
-				<install as="cake" name="bin/cake" />
-			</release>
-			<exceptions key="Cake/VERSION.txt">php</exceptions>
-			<exceptions key="Cake/LICENSE.txt">php</exceptions>
-			<exceptions key="Cake/Config/cacert.pem">php</exceptions>
-			<exceptions key="Cake/Console/Templates/skel/.htaccess">php</exceptions>
-			<exceptions key="Cake/Console/Templates/skel/webroot/.htaccess">php</exceptions>
-		</d51pearpkg2>
-	</target>
+  <property name="phpmd.done" value="true"/>
+ </target>
 
-	<!-- Generate the PEAR package from a directory and move the files to the dist folder -->
-	<target name="generate-package" depends="define-pear-package">
-		<exec command="pear package" dir="${build.dir}/${pear.package}" passthru="true"/>
-		<echo msg="Moving ${pear.package}.tgz"/>
-		<move file="${build.dir}/${pear.package}/${pear.package}.tgz" todir="${dist.dir}" />
-	</target>
+ <target name="phpcs"
+         unless="phpcs.done"
+         description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpcs" taskname="phpcs">
+   <arg value="--standard=PSR2" />
+   <arg value="--extensions=php" />
+   <arg value="--ignore=autoload.php" />
+   <arg path="${basedir}/src" />
+   <arg path="${basedir}/tests" />
+  </exec>
 
-	<!--
-		Updates the local copy to the latest head.
-	-->
-	<target name="update-branch">
-		<echo msg="Updating to latest master." />
-		<exec executable="git pull">
-			<arg value="${git.remote}" />
-			<arg value="master" />
-		</exec>
-	</target>
+  <property name="phpcs.done" value="true"/>
+ </target>
 
-	<!--
-		Bump the version number and commit that.
-	-->
-	<target name="next-version" depends="current-version">
-		<echo msg="Incrementing version." />
-		<propertyprompt propertyName="release_version" defaultValue="${version}" promptText="Enter version to be released."/>
-		<echo msg="$file = file_get_contents('./lib/Cake/VERSION.txt'); $file = str_replace('${version}', '${release_version}', $file); file_put_contents('./lib/Cake/VERSION.txt', $file);" />
-		<exec executable="php">
-			<arg value="-r" />
-			<arg value="$file = file_get_contents('./lib/Cake/VERSION.txt'); $file = str_replace('${version}', '${release_version}', $file); file_put_contents('./lib/Cake/VERSION.txt', $file);" />
-		</exec>
-		<echo msg="Version number updated." />
-		<property name="version" value="${release_version}" override="true" />
-	</target>
+ <target name="phpcs-ci"
+         unless="phpcs.done"
+         depends="prepare"
+         description="Find coding standard violations using PHP_CodeSniffer and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phpcs" output="/dev/null" taskname="phpcs">
+   <arg value="--report=checkstyle" />
+   <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
+   <arg value="--standard=PSR2" />
+   <arg value="--extensions=php" />
+   <arg value="--ignore=autoload.php" />
+   <arg path="${basedir}/src" />
+  </exec>
 
-	<!--
-		Create the release commit that updates the version number and pushes the commits.
-	-->
-	<target name="release-commit" depends="update-branch,next-version,prepare">
-		<echo msg="Creating new release commit" />
-		<exec command="git add ./lib/Cake/VERSION.txt" logoutput="true" checkreturn="true" />
-		<exec command="git commit -m 'Update version number to ${release_version}'" logoutput="true" checkreturn="true" />
-		<exec command="git tag -s ${release_version} -m 'CakePHP ${release_version}'" logoutput="true" checkreturn="true" />
+  <property name="phpcs.done" value="true"/>
+ </target>
 
-		<propertyprompt propertyName="shipit" defaultValue="n" promptText="Ship the new commit and tag?" />
-		<condition property="noshipit" value="1">
-			<equals arg1="n" arg2="${shipit}" casesensitive="false" />
-		</condition>
-		<fail if="noshipit" msg="You said not to ship it." />
+ <target name="phpcpd"
+         unless="phpcpd.done"
+         description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
+   <arg path="${basedir}/src" />
+  </exec>
 
-		<echo msg="Pushing commit and tag." />
-		<exec command="git push ${git.remote} ${git.branch}" logoutput="true" checkreturn="true" />
-		<exec command="git push ${git.remote} ${release_version}" logoutput="true" checkreturn="true" />
-		<echo msg="Push complete." />
-	</target>
+  <property name="phpcpd.done" value="true"/>
+ </target>
 
-	<!--
-		Upload to pirum pear channel.
-	-->
-	<target name="distribute" depends="prepare" description="Upload pear packages to pear.cakephp.org">
-		<echo msg="Uploading tgz file to cakephp.org" />
-		<exec command="scp ${dist.dir}/${pear.package}.tgz cakephp@cakephp.org:${pirum.dir}" dir="." checkreturn="true"  />
+ <target name="phpcpd-ci"
+         unless="phpcpd.done"
+         depends="prepare"
+         description="Find duplicate code using PHPCPD and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
+   <arg value="--log-pmd" />
+   <arg path="${basedir}/build/logs/pmd-cpd.xml" />
+   <arg path="${basedir}/src" />
+  </exec>
 
-		<echo msg="Adding new release to pirum" />
-		<exec command="ssh cakephp@cakephp.org pirum add ${pirum.dir} ${pirum.dir}/${pear.package}.tgz" checkreturn="true" />
-	</target>
+  <property name="phpcpd.done" value="true"/>
+ </target>
 
-	<target name="codestyle" description="Check codestyle (human readable format)">
-		<phpcodesniffer
-			standard="CakePHP"
-			allowedFileExtensions="php">
-			<fileset refid="libs" />
-		</phpcodesniffer>
-	</target>
+ <target name="phpunit"
+         unless="phpunit.done"
+         depends="prepare"
+         description="Run unit tests with PHPUnit">
+  <exec executable="${toolsdir}phpunit" failonerror="true" taskname="phpunit">
+   <arg value="--configuration"/>
+   <arg path="${basedir}/build/phpunit.xml"/>
+  </exec>
 
-	<target name="reports-ci">
-		<phpcodesniffer
-			standard="CakePHP"
-			allowedFileExtensions="php">
-			<fileset refid="libs" />
-			<formatter type="checkstyle" outfile="checkstyle.xml" />
-		</phpcodesniffer>
-		<phpcpd
-			minLines="4"
-			minTokens="50">
-			<fileset refid="libs" />
-			<formatter type="pmd" outfile="pmd-cpd.xml"/>
-		</phpcpd>
-		<phpdepend>
-			<fileset refid="libs" />
-			<logger type="jdepend-xml" outfile="jdepend.xml"/>
-		</phpdepend>
-		<phpmd rulesets="codesize,unusedcode,design">
-			<fileset refid="libs" />
-			<formatter type="xml" outfile="reports/pmd.html"/>
-		</phpmd>
-	</target>
+  <property name="phpunit.done" value="true"/>
+ </target>
 
-	<!--
-		Top level easy to type targets
-	-->
-	<target name="build" depends="generate-package" description="Generate a pear package" />
-	<target name="release" depends="release-commit,build,distribute" description="Release a new version of CakePHP" />
-	<target name="code-reports" depends="reports-ci"
-		description="Run the code reports, generating XML output for CI server use." />
+ <target name="phpdox"
+         unless="phpdox.done"
+         depends="phploc-ci,phpcs-ci,phpmd-ci"
+         description="Generate project documentation using phpDox">
+  <exec executable="${toolsdir}phpdox" dir="${basedir}/build" taskname="phpdox"/>
 
+  <property name="phpdox.done" value="true"/>
+ </target>
 </project>
+
