--- a/build.xml
+++ b/build.xml
@@ -55,7 +55,7 @@
   <apply executable="php" failonerror="true" taskname="lint">
    <arg value="-l" />
 
-   <fileset dir="${basedir}/src">
+   <fileset dir="${basedir}/app">
     <include name="**/*.php" />
     <modified />
    </fileset>
@@ -74,7 +74,7 @@
          description="Measure project size using PHPLOC and print human readable output. Intended for usage on the command line.">
   <exec executable="${toolsdir}phploc" taskname="phploc">
    <arg value="--count-tests" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
    <arg path="${basedir}/tests" />
   </exec>
 
@@ -91,7 +91,7 @@
    <arg path="${basedir}/build/logs/phploc.csv" />
    <arg value="--log-xml" />
    <arg path="${basedir}/build/logs/phploc.xml" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
    <arg path="${basedir}/tests" />
   </exec>
 
@@ -106,7 +106,7 @@
    <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
    <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
    <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="pdepend.done" value="true"/>
@@ -116,7 +116,7 @@
          unless="phpmd.done"
          description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
   <exec executable="${toolsdir}phpmd" taskname="phpmd">
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
    <arg value="text" />
    <arg path="${basedir}/build/phpmd.xml" />
   </exec>
@@ -129,7 +129,7 @@
          depends="prepare"
          description="Perform project mess detection using PHPMD and log result in XML format. Intended for usage within a continuous integration environment.">
   <exec executable="${toolsdir}phpmd" taskname="phpmd">
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
    <arg value="xml" />
    <arg path="${basedir}/build/phpmd.xml" />
    <arg value="--reportfile" />
@@ -146,7 +146,7 @@
    <arg value="--standard=PSR2" />
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
    <arg path="${basedir}/tests" />
   </exec>
 
