--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,7 @@
     <modified />
    </fileset>
 
-   <fileset dir="${basedir}/tests">
+   <fileset dir="${basedir}/App/Test">
     <include name="**/*.php" />
     <modified />
    </fileset>
@@ -75,7 +75,7 @@
   <exec executable="${toolsdir}phploc" taskname="phploc">
    <arg value="--count-tests" />
    <arg path="${basedir}/app" />
-   <arg path="${basedir}/tests" />
+   <arg path="${basedir}/app/Test" />
   </exec>
 
   <property name="phploc.done" value="true"/>
@@ -92,7 +92,7 @@
    <arg value="--log-xml" />
    <arg path="${basedir}/build/logs/phploc.xml" />
    <arg path="${basedir}/app" />
-   <arg path="${basedir}/tests" />
+   <arg path="${basedir}/app/Test" />
   </exec>
 
   <property name="phploc.done" value="true"/>
@@ -147,7 +147,7 @@
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
    <arg path="${basedir}/app" />
-   <arg path="${basedir}/tests" />
+   <arg path="${basedir}/app/Test" />
   </exec>
 
   <property name="phpcs.done" value="true"/>
@@ -163,7 +163,7 @@
    <arg value="--standard=PSR2" />
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcs.done" value="true"/>
@@ -173,7 +173,7 @@
          unless="phpcpd.done"
          description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
   <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcpd.done" value="true"/>
@@ -186,7 +186,7 @@
   <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
    <arg value="--log-pmd" />
    <arg path="${basedir}/build/logs/pmd-cpd.xml" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcpd.done" value="true"/>
