--- a/build.xml
+++ b/build.xml
@@ -7,11 +7,11 @@
  <property name="toolsdir" value="${basedir}/vendor/bin/"/>
 
  <target name="build"
-         depends="prepare,lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci,phpunit,phpdox"
+         depends="prepare,lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci,phpunit"
          description=""/>
 
  <target name="build-parallel"
-         depends="prepare,lint,tools-parallel,phpunit,phpdox"
+         depends="prepare,lint,tools-parallel,phpunit"
          description=""/>
 
  <target name="tools-parallel" description="Run tools in parallel">
