--- a/build.xml
+++ b/build.xml
@@ -1,40 +1,181 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="cakephp" default="build">
- <!-- By default, we assume all tools to be on the $PATH -->
- <!-- <property name="toolsdir" value=""/> -->
 
- <!-- Uncomment the following when the tools are in ${basedir}/vendor/bin -->
+<project name="CakePHP" default="build">
  <property name="toolsdir" value="${basedir}/vendor/bin/"/>
- <property name="output" location="${basedir}/buildOutput/"/>
- <target name="init">
-  <mkdir dir="${output}" />
-  <mkdir dir="${output}/phpcs/" />
-  <mkdir dir="${output}/pdepend/" />
-  </target>
-
-  <target name="build" depends="init, phpcs, pdepend">
-  </target>
-
-  <target name="phpcs">
-    <exec executable="${toolsdir}phpcs"> 
-      <arg line="--report=checkstyle
-                    --report-file=${output}/phpcs/checkstyle.xml
-                    --standard=Zend
-                    ${basedir}" />
-    </exec>
-  </target>
-
-  <target name="pdepend">
-    <exec executable="${toolsdir}pdepend">
-      <arg line="
-        --jdepend-xml=${output}/pdepend/jdepend.xml 
-        --jdepend-chart=${output}/pdepend/dependencies.svg 
-        --overview-pyramid=${output}/pdepend/overview-pyramid.svg 
-        --ignore=Tests/ 
-        .
-      " />
-    </exec>
-  </target>
-
  
+ <target name="build"
+   depends="prepare,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpdoc,cake,phpcb"/>
+   
+
+ <target name="build-parallel"
+   depends="prepare,lint,tools-parallel,cake,phpcb"/>
+
+ <target name="tools-parallel"
+         description="Run tools in parallel">
+  <parallel threadCount="2">
+   <sequential>
+    <antcall target="pdepend"/>
+    <antcall target="phpmd-ci"/>
+   </sequential>
+   <antcall target="phpcpd"/>
+   <antcall target="phpcs-ci"/>
+   <antcall target="phploc"/>
+   <antcall target="phpdoc"/>
+  </parallel>
+ </target>
+
+ <target name="clean" description="Cleanup build artifacts">
+  <delete dir="${basedir}/build/api"/>
+  <delete dir="${basedir}/build/code-browser"/>
+  <delete dir="${basedir}/build/coverage"/>
+  <delete dir="${basedir}/build/pdepend"/>
+  <delete dir="${basedir}/build/logs"/>
+ </target>
+
+ <target name="prepare" depends="clean"
+         description="Prepare for build">
+  <mkdir dir="${basedir}/build/api"/>
+  <mkdir dir="${basedir}/build/code-browser"/>
+  <mkdir dir="${basedir}/build/coverage"/>
+  <mkdir dir="${basedir}/build/pdepend"/>
+  <mkdir dir="${basedir}/build/logs"/>
+ </target>
+
+ <target name="lint">
+  <apply executable="php" failonerror="true">
+   <arg value="-l" />
+   <fileset dir="${basedir}/lib/Cake">
+    <include name="**/*.php" />
+    <modified />
+   </fileset>
+  </apply>
+ </target>
+
+ <target name="phploc" description="Measure project size using PHPLOC">
+  <exec executable="${toolsdir}phploc">
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Test" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Templates" />
+   <arg value="--log-csv" />
+   <arg value="${basedir}/build/logs/phploc.csv" />
+   <arg path="${basedir}/lib/Cake" />
+  </exec>
+ </target>
+
+ <target name="pdepend"
+         description="Calculate software metrics using PHP_Depend">
+  <exec executable="${toolsdir}pdepend">
+   <arg value="--ignore=${basedir}/lib/Cake/Test,${basedir}/lib/Cake/Console/Templates" />
+   <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
+   <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
+   <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
+   <arg path="${basedir}/lib/Cake" />
+  </exec>
+ </target>
+
+ <target name="phpmd"
+         description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpmd">
+   <arg path="${basedir}/lib/Cake" />
+   <arg value="text" />
+   <arg value="codesize,design,naming,unusedcode" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Test" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Console/Templates" />
+  </exec>
+ </target>
+
+ <target name="phpmd-ci"
+         description="Perform project mess detection using PHPMD creating a log file for the continuous integration server">
+  <exec executable="${toolsdir}phpmd">
+   <arg path="${basedir}" />
+   <arg value="xml" />
+   <arg value="codesize,design,naming,unusedcode" />
+   <arg value="--reportfile" />
+   <arg value="${basedir}/build/logs/pmd.xml" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Test" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Console/Templates" />
+  </exec>
+ </target>
+
+ <target name="phpcs"
+         description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpcs">
+   <arg value="--standard=CakePHP" />
+   <arg value="--encoding=utf-8" />
+   <arg value="--ignore=${basedir}/lib/Cake/Console/Templates,${basedir}/lib/Cake/Test,*.txt,*.bat,*js" />
+   <arg path="${basedir}/lib/Cake" />
+  </exec>
+ </target>
+
+ <target name="phpcs-ci"
+         description="Find coding standard violations using PHP_CodeSniffer creating a log file for the continuous integration server">
+  <exec executable="${toolsdir}phpcs" output="/dev/null">
+   <arg value="--report=checkstyle" />
+   <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
+   <arg value="--standard=CakePHP" />
+   <arg value="--encoding=utf-8" />
+   <arg value="--ignore=${basedir}/lib/Cake/Console/Templates,${basedir}/lib/Cake/Test,*.txt,*.bat,*js" /> 
+   <arg path="${basedir}/lib/Cake" />
+  </exec>
+ </target>
+
+ <target name="phpcpd" description="Find duplicate code using PHPCPD">
+  <exec executable="${toolsdir}phpcpd">
+   <arg value="--log-pmd" />
+   <arg value="${basedir}/build/logs/pmd-cpd.xml" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Test" />
+   <arg value="--exclude" />
+   <arg value="${basedir}/lib/Cake/Console/Templates" />
+   <arg path="${basedir}/lib/Cake" />
+  </exec>
+ </target>
+
+ <target name="phpdoc"
+         description="Generate API documentation using PHPDocumentor">
+  <exec executable="${toolsdir}phpdoc">
+   <arg value="--directory" />
+   <arg path="${basedir}/lib/Cake" />
+   <arg value="--target" />
+   <arg path="${basedir}/build/api" />
+   <arg value="--ignore" />
+   <arg value="Console/cake.php,Test/,Console/Templates/skel/,Config/unicode/" />
+   </exec>
+ </target>
+
+ <target name="cake" description="Run unit tests">
+  <exec executable="app/Console/cake">
+   <arg value="test" />
+   <arg value="core" />
+   <arg value="AllTests" />
+   <arg value="--stderr" />
+   <arg value="--log-junit" />
+   <arg path="build/logs/junit.xml" />
+   <arg value="--coverage-clover" />
+   <arg path="build/logs/clover.xml" />
+   <arg value="--coverage-html" />
+   <arg path="build/coverage/" />
+  </exec>
+ </target>
+
+ <target name="phpcb"
+         description="Aggregate tool output with PHP_CodeBrowser">
+  <exec executable="${toolsdir}phpcb">
+   <arg value="--log" />
+   <arg path="${basedir}/build/logs" />
+   <arg value="--source" />
+   <arg path="${basedir}/lib/Cake" />
+   <arg value="--output" />
+   <arg path="${basedir}/build/code-browser" />
+   <arg value="-S" />
+   <arg value="php" />
+   <arg value="-i" />
+   <arg value="lib/Cake/Console/cake,lib/Cake/Console/cake.php,lib/Cake/Test/,lib/Cake/LICENSE.txt,lib/Cake/VERSION.txt,lib/Cake/Console/Templates/skel/" />
+  </exec>
+ </target>
 </project>
