--- a/build.xml
+++ b/build.xml
@@ -55,12 +55,12 @@
   <apply executable="php" failonerror="true" taskname="lint">
    <arg value="-l" />
 
-   <fileset dir="${basedir}/src">
+   <fileset dir="${basedir}">
     <include name="**/*.php" />
     <modified />
    </fileset>
 
-   <fileset dir="${basedir}/tests">
+   <fileset dir="${basedir}">
     <include name="**/*.php" />
     <modified />
    </fileset>
