--- a/build.xml
+++ b/build.xml
@@ -57,6 +57,7 @@
 
    <fileset dir="${basedir}">
     <include name="**/*.php" />
+    <exclude name="vendor/" />
     <modified />
    </fileset>
 
@@ -74,8 +75,7 @@
          description="Measure project size using PHPLOC and print human readable output. Intended for usage on the command line.">
   <exec executable="${toolsdir}phploc" taskname="phploc">
    <arg value="--count-tests" />
-   <arg path="${basedir}/src" />
-   <arg path="${basedir}/tests" />
+   <arg path="${basedir}" />
   </exec>
 
   <property name="phploc.done" value="true"/>
