--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="name-of-project" default="build">
- <!-- By default, we assume all tools to be on the $PATH -->
- <!-- <property name="toolsdir" value=""/> -->
-
- <!-- Uncomment the following when the tools are in ${basedir}/vendor/bin -->
+<project name="cakephp" default="build">
  <property name="toolsdir" value="${basedir}/vendor/bin/"/>
 
  <target name="build"
