--- a/build.xml
+++ b/build.xml
@@ -102,8 +102,8 @@
    <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
    <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
    <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-   <arg path="${basedir}/src" />
-  </exec>
+   <arg path="${basedir}" />
+  </exec>depend
 
   <property name="pdepend.done" value="true"/>
  </target>
@@ -112,7 +112,7 @@
          unless="phpmd.done"
          description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
   <exec executable="${toolsdir}phpmd" taskname="phpmd">
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}" />
    <arg value="text" />
    <arg path="${basedir}/build/phpmd.xml" />
   </exec>
@@ -125,7 +125,7 @@
          depends="prepare"
          description="Perform project mess detection using PHPMD and log result in XML format. Intended for usage within a continuous integration environment.">
   <exec executable="${toolsdir}phpmd" taskname="phpmd">
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}" />
    <arg value="xml" />
    <arg path="${basedir}/build/phpmd.xml" />
    <arg value="--reportfile" />
@@ -142,8 +142,7 @@
    <arg value="--standard=PSR2" />
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}/src" />
-   <arg path="${basedir}/tests" />
+   <arg path="${basedir}" />
   </exec>
 
   <property name="phpcs.done" value="true"/>
@@ -159,7 +158,7 @@
    <arg value="--standard=PSR2" />
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}" />
   </exec>
 
   <property name="phpcs.done" value="true"/>
@@ -169,7 +168,7 @@
          unless="phpcpd.done"
          description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
   <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}" />
   </exec>
 
   <property name="phpcpd.done" value="true"/>
@@ -182,7 +181,7 @@
   <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
    <arg value="--log-pmd" />
    <arg path="${basedir}/build/logs/pmd-cpd.xml" />
-   <arg path="${basedir}/src" />
+   <arg path="${basedir}" />
   </exec>
 
   <property name="phpcpd.done" value="true"/>
@@ -204,7 +203,7 @@
          unless="phpdox.done"
          depends="phploc-ci,phpcs-ci,phpmd-ci"
          description="Generate project documentation using phpDox">
-  <exec executable="${toolsdir}phpdox-0.8.0.phar" dir="${basedir}/build" taskname="phpdox"/>
+  <exec executable="${toolsdir}phpdox-0.8.0." dir="${basedir}/build" taskname="phpdox"/>
 
   <property name="phpdox.done" value="true"/>
  </target>
