--- a/build.xml
+++ b/build.xml
@@ -103,7 +103,7 @@
    <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
    <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
    <arg path="${basedir}" />
-  </exec>depend
+  </exec>
 
   <property name="pdepend.done" value="true"/>
  </target>
