--- a/build.xml
+++ b/build.xml
@@ -101,7 +101,7 @@
    <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
    <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
    <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-   <arg path="${basedir}" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="pdepend.done" value="true"/>
@@ -124,7 +124,7 @@
          depends="prepare"
          description="Perform project mess detection using PHPMD and log result in XML format. Intended for usage within a continuous integration environment.">
   <exec executable="${toolsdir}phpmd" taskname="phpmd">
-   <arg path="${basedir}" />
+   <arg path="${basedir}/app" />
    <arg value="xml" />
    <arg path="${basedir}/build/phpmd.xml" />
    <arg value="--reportfile" />
@@ -141,7 +141,7 @@
    <arg value="--standard=PSR2" />
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcs.done" value="true"/>
@@ -157,7 +157,7 @@
    <arg value="--standard=PSR2" />
    <arg value="--extensions=php" />
    <arg value="--ignore=autoload.php" />
-   <arg path="${basedir}" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcs.done" value="true"/>
@@ -167,7 +167,7 @@
          unless="phpcpd.done"
          description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
   <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
-   <arg path="${basedir}" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcpd.done" value="true"/>
@@ -180,7 +180,7 @@
   <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
    <arg value="--log-pmd" />
    <arg path="${basedir}/build/logs/pmd-cpd.xml" />
-   <arg path="${basedir}" />
+   <arg path="${basedir}/app" />
   </exec>
 
   <property name="phpcpd.done" value="true"/>
