--- a/build.xml
+++ b/build.xml
@@ -202,7 +202,7 @@
          unless="phpdox.done"
          depends="phploc-ci,phpcs-ci,phpmd-ci"
          description="Generate project documentation using phpDox">
-  <exec executable="${toolsdir}phpdox-0.8.0." dir="${basedir}/build" taskname="phpdox"/>
+  <exec executable="${toolsdir}phpdox-0.8.0.phar" dir="${basedir}/build" taskname="phpdox"/>
 
   <property name="phpdox.done" value="true"/>
  </target>
